--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,14 @@
   color: goldenrod;
   min-height: 100vh;
 }
+
+.card-1 i {
+  cursor: pointer;
+  display: none;
+}
+
+.card-1:hover i {
+  display: inline-block;
+  zoom: 200%;
+  color: red;
+}
